// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavigationItem /> Should render correctly 1`] = `
<div>
  <a
    aria-label="name"
    href="/test"
  >
    <button
      aria-hidden="true"
      class="button__outer button__outer--dark-text button__outer--bouncy button__outer--link"
      type="button"
    >
      name
    </button>
  </a>
</div>
`;

exports[`<NavigationItem /> Should render correctly hrefExternal 1`] = `
<div>
  <a
    aria-label="name"
    href="/test"
    rel="noopener noreferrer"
    target="_blank"
  >
    <button
      aria-hidden="true"
      class="button__outer button__outer--dark-text button__outer--bouncy button__outer--link"
      type="button"
    >
      name
    </button>
  </a>
</div>
`;

exports[`<NavigationItem /> Should render correctly with custom className 1`] = `
<div>
  <a
    aria-label="name"
    href="/test"
  >
    <button
      aria-hidden="true"
      class="button__outer button__outer--dark-text button__outer--bouncy button__outer--link test-custom-classname"
      type="button"
    >
      name
    </button>
  </a>
</div>
`;
